<?xml version="1.0" encoding="utf-8"?>
<dev.kobalt.callblock.view.VerticalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <dev.kobalt.callblock.view.VerticalStackView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <dev.kobalt.callblock.view.OptionView
            android:id="@+id/predefinedRuleOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:subtitleLabel="@string/options_predefined_rule_subtitle"
            app:titleLabel="@string/options_predefined_rule_title"
            app:visibleSwitch="true" />

        <dev.kobalt.callblock.view.FrameView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.25"
            android:background="@color/black" />

        <dev.kobalt.callblock.view.OptionView
            android:id="@+id/contactRuleOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:subtitleLabel="@string/options_contact_rule_subtitle"
            app:titleLabel="@string/options_contact_rule_title"
            app:visibleSwitch="true" />

        <dev.kobalt.callblock.view.FrameView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.25"
            android:background="@color/black" />

        <dev.kobalt.callblock.view.OptionView
            android:id="@+id/userRuleOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:subtitleLabel="@string/options_user_rule_subtitle"
            app:titleLabel="@string/options_user_rule_title"
            app:visibleSwitch="true" />

        <dev.kobalt.callblock.view.FrameView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.25"
            android:background="@color/black" />

        <dev.kobalt.callblock.view.OptionView
            android:id="@+id/userEditOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:subtitleLabel="@string/options_user_edit_subtitle"
            app:titleLabel="@string/options_user_edit_title" />

        <dev.kobalt.callblock.view.FrameView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.25"
            android:background="@color/black" />

        <dev.kobalt.callblock.view.OptionView
            android:id="@+id/permissionsOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:subtitleLabel="@string/options_permissions_subtitle"
            app:titleLabel="@string/options_permissions_title" />

        <dev.kobalt.callblock.view.FrameView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.25"
            android:background="@color/black" />

    </dev.kobalt.callblock.view.VerticalStackView>


</dev.kobalt.callblock.view.VerticalScrollView>